# log6302a-tp1

./: README.md  pyproject.toml
code_to_analyze/test_cve/: 2021_21707.php.ast.json
src/: README.ipynb  README.py  cve_detection.py  pattern_detection.py  rapport.ipynb  visualizer.py
src/code_analysis/: AST.py  ASTDynamic.py  ASTDynamicReader.py  ASTFragmentation.py  ASTReader.py  CFG.py  CFGReader.py  Graph.py  GraphException.py  __init__.py
