[tool.poetry]
name = "log6302a-tp1"
version = "0.1.0"
description = ""
authors = [
    "Julien Cassagne <julien.e.cassagne@gmail.com>",
    "NextFire <git@yuru.moe>",
    "quentinguidee <contact@quentinguidee.dev>",
]
readme = "README.md"
packages = [{ include = "code_analysis", from = "src" }]

[tool.poetry.dependencies]
python = "~3.12"
numpy = "^1.26.3"
graphviz = "^0.20.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
